# ghostlink

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
_archive/: AGENT-PLAN.md  ARCHITECTURE.md  IDEA.md  PLAN.md  PRD.md  TUI.md  WORKFLOWS.md
docs/: bulk-format.md  commands.md  json-and-exit-codes.md  relation-sets.md  safety-and-compatibility.md  skill-installation.md  sync-and-schedules.md
skills/ghostlink-skill/: SKILL.md
src/ghostlink/: __init__.py  core.py
src/ghostlink/cli/: main.py  parser.py
src/ghostlink/compat/: legacy_flags.py
src/ghostlink/domain/: __init__.py  models.py  paths.py  results.py  validation.py
src/ghostlink/integrations/: launchd.py
src/ghostlink/output/: prompts.py  renderers.py
src/ghostlink/services/: check_service.py  config_service.py  find_service.py  link_service.py  registry_service.py  schedule_service.py  sync_service.py
src/ghostlink/storage/: registry.py  run_log.py
src/symlink_cli/: __init__.py  core.py
tests/: conftest.py  test_cli_flows.py  test_core_smoke.py  test_domain_contracts.py  test_output_contracts.py  test_registry_contracts.py  test_schedule_contracts.py  test_services.py
