[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostlink"
version = "1.0.0"
description = "Guided macOS CLI for symlink workflows, checks, sync, and scheduling"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
ghostlink = "ghostlink.core:main"
symlink-cli = "ghostlink.core:main"
slink = "ghostlink.core:main"
# other alias candidates (uncomment to activate):
# linkmate = "ghostlink.core:main"
# ghostlink = "ghostlink.core:main"
# mirrorlink = "ghostlink.core:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
